--- a/setup.bat.template
+++ b/setup.bat.template
@@ -6,3 +6,4 @@ set JRUBY_JAR=%JRUBY_PATH%\jruby-complete-9.1.8.0.jar
 set JAVA_HOME=C:\languages\Java\jdk1.8.0_65
 set ISAAC_PATH=C:\VA_UI\isaac-rest
 set PATH=%GEM_HOME%\bin;%JRUBY_PATH%\bin;%JAVA_HOME%\bin;%PATH%;
+rem set GIT_SSL_NO_VERIFY=true
