--- a/pom.xml
+++ b/pom.xml
@@ -264,6 +264,21 @@
 					</execution>
 
 					<execution>
+						<id>react on rails</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>exec</goal>
+						</goals>
+						<configuration>
+							<jrubyVerbose>true</jrubyVerbose>
+							<jrubyJvmArgs>-Xmx4000m -Djava.awt.headless=true</jrubyJvmArgs>
+							<execArgs>RAILS_ENV=${railsMode}</execArgs>
+							<command>rake</command>
+							<args>devops:set_up_react</args>
+						</configuration>
+					</execution>
+
+					<execution>
 						<id>run integration tests</id>
 						<phase>compile</phase>
 						<goals>
