Build, dear god build...

--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build:test": "webpack --config webpack.config.js",
-    "build:production": "Nwebpack -p --config webpack.config.js",
+    "build:production": "webpack -p --config webpack.config.js",
     "build:development": "webpack -w --config webpack.config.js"
   },
   "cacheDirectories": ["node_modules", "client/node_modules"],
